2009-02-20  Martin Leidig  <mleidig@schlund.de>

	Fixed browser reload problem: reloading a page used in multiple flows
	could cause the selection of the wrong pageflow if the URL doesn't
	contain a __lf parameter indicating the right flow. URLs don't contain
	the __lf parameter if they're created by a redirect (for forcing SSL
	or getting the page name into the URL). Fixed the problem by adding
	the __lf parameter from the originating URL to the redirection URL.
	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Fixed authorization exceptions and NPEs for unconfigured pages

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: added support for deployment via WebDAV and use it
	as default, added support for deploying releases and snapshots to
	different locations (can be set using the build.properties
	remote.repository.url.releases and remote.repository.url.snapshots)

2009-02-13  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/iwrapper.xsl: removed @SuppressWarnings at local
	variable definitions and only create definition if variable is used
	later (checked by XPath expression). Thus we get rid of the
	'Unnecessary @SuppressWarnings("unused")' warnings in the IDE.

2009-02-09  Martin Leidig  <mleidig@schlund.de>

	Added $__contextpath to deref URLs
	* projects/core/xsl/master.xsl
	* projects/core/xsl/forminput.xsl

2009-02-06  Martin Leidig  <mleidig@schlund.de>

	Added classversioncheck target, which checks if classes in the build
	folder and from jar files in the lib folder are compatible to the
	version specified as javac.target property. The check is only
	automatically executed as dependency of the jar target.

	Added:
	* src/org/pustefixframework/tools/ClassVersionChecker.java